--- a/platforms/Arduino/Makefile
+++ b/platforms/Arduino/Makefile
@@ -4,11 +4,11 @@ PORT = /dev/ttyUSB0
 FQBN = esp32:esp32:esp32wrover
 
 flash: 
-	arduino-cli upload -p $(PORT)  --fqbn $(FQBN) Arduino-socket.ino
+	arduino-cli upload -p $(PORT)  --fqbn $(FQBN) Arduino.ino
 
 compile: 
-	arduino-cli -v compile --fqbn $(FQBN) Arduino-socket.ino
+	arduino-cli -v compile --fqbn $(FQBN) Arduino.ino
 
 monitor: 
-	arduino-cli monitor -p $(PORT)  -c baudrate=115200
+	arduino-cli monitor -p $(PORT) -c baudrate=115200
 
