--- a/platforms/Arduino-socket/Arduino-socket.ino.template
+++ b/platforms/Arduino-socket/Arduino-socket.ino.template
@@ -12,7 +12,7 @@
 unsigned int wasm_len = upload_wasm_len;
 unsigned char* wasm = upload_wasm;
 
-WARDuino wac;
+WARDuino* wac = WARDuino::instance();
 Module* m;
 
 SocketServer* server;
@@ -25,7 +25,7 @@ uint16_t pushportno = 8081;
 void startDebuggerStd(void* pvParameter) {
     int valread;
     uint8_t buffer[1024] = {0};
-    wac.debugger->socket = fileno(stdout);
+    wac->debugger->socket = fileno(stdout);
     write(fileno(stdout), "Got a message ... \n", 19);
     while (true) {
         // taskYIELD();
@@ -40,7 +40,7 @@ void startDebuggerStd(void* pvParameter) {
             if (buff_len) {
                 write(fileno(stdout), "Reading message ..... \n", 19);
                 fflush(stdout);
-                wac.handleInterrupt(valread - 1, buffer);
+                wac->handleInterrupt(valread - 1, buffer);
                 write(fileno(stdout), buffer, valread);
                 fflush(stdout);
             }
@@ -49,7 +49,7 @@ void startDebuggerStd(void* pvParameter) {
 }
 
 void handleInterrupt(size_t len, uint8_t* buff) {
-    wac.handleInterrupt(len, buff);
+    wac->handleInterrupt(len, buff);
 }
 
 void setup(void) {
@@ -74,7 +74,7 @@ void setup(void) {
 
 void loop() {
     disableCore0WDT();
-    m = wac.load_module(wasm, wasm_len, {});
+    m = wac->load_module(wasm, wasm_len, {});
     server->begin();
 
     printf("LOADED \n\n");
@@ -83,8 +83,8 @@ void loop() {
     xTaskCreate(startDebuggerStd, "Debug Thread", 5000, NULL, 1, NULL);
     printf("START\n\n");
 
-    wac.run_module(m);
+    wac->run_module(m);
 
     printf("END\n\n");
-    wac.unload_module(m);
+    wac->unload_module(m);
 }
