--- a/benchmarks/tasks/makefile
+++ b/benchmarks/tasks/makefile
@@ -16,12 +16,12 @@ all: $(addsuffix /wast/warduino/warduino.ino,$(TASKS)) $(addsuffix /wast/wasm3/w
 	echo $(TASKS)
 
 
-%/wast/warduino/warduino.ino: .config %/wast/impl.wasm
+%/wast/warduino/warduino.ino: %/wast/impl.wasm .config
 	-mkdir $(@D)
 	xxd -i $< $@
-	sed -i 's/[^ ]*_impl_wasm/impl_wasm/'  $@
-	sed -i 's/{{SSID}}/$(SSID)/g; s/{{Password}}/$(PASSWORD)/g' $@
+	sed -i 's/[^ ]*_impl_wasm/impl_wasm/' $@
 	cat ../warduino.ino.template >> $@
+	sed -i 's/{{SSID}}/$(SSID)/g; s/{{Password}}/$(PASSWORD)/g' $@
 
 %/wast/wasm3/wasm3.ino: %/wast/impl.wasm
 	-mkdir $(@D)
