--- a/platforms/ESP-IDF/CMakeLists.txt
+++ b/platforms/ESP-IDF/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCE_FILES
         ../../src/Primitives/idf.cpp
         ../../src/Interpreter/instructions.cpp
         ../../src/RFC/rfc.cpp
-        ../../src/RFC/proxy_server.cpp
+        ../../src/RFC/proxy_supervisor.cpp
         ../../src/RFC/SocketServer.cpp
         ../../src/WARDuino/CallbackHandler.cpp
         )
