--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ if (BUILD_EMULATOR)
             src/WARDuino/CallbackHandler.cpp
             src/Primitives/emulated.cpp
             src/Interpreter/instructions.cpp
-            src/RFC/rfc.cpp
+            src/RFC/proxy.cpp
             src/RFC/proxy_supervisor.cpp
             src/RFC/SocketServer.cpp
             src/Utils/sockets.cpp)
