Add `Channel` class to abstract comms socket

--- a/benchmarks/edward.ino.template
+++ b/benchmarks/edward.ino.template
@@ -34,7 +34,7 @@ void ICACHE_RAM_ATTR handleInput() {
 void startDebuggerStd(void* pvParameter) {
     int valread;
     uint8_t buffer[1024] = {0};
-    wac->debugger->socket = fileno(stdout);
+    wac->debugger->setChannel(fileno(stdout));
     write(fileno(stdout), "Got a message ... \n", 19);
     while (true) {
         // taskYIELD();
