Fix IDF compilation

--- a/platforms/ESP-IDF/CMakeLists.txt
+++ b/platforms/ESP-IDF/CMakeLists.txt
@@ -1,15 +1,16 @@
 set(SOURCE_FILES
-        ../../src/Memory/mem.cpp
-        ../../src/Utils/util.cpp
-        ../../src/Utils/util_arduino.cpp
         ../../src/Debug/debugger.cpp
-        ../../src/Utils/macros.cpp
-        ../../src/WARDuino/WARDuino.cpp
-        ../../src/Primitives/idf.cpp
         ../../src/Interpreter/instructions.cpp
+        ../../src/Memory/mem.cpp
+        ../../src/Primitives/idf.cpp
         ../../src/RFC/proxy.cpp
         ../../src/RFC/proxy_supervisor.cpp
+        ../../src/Utils/macros.cpp
+        ../../src/Utils/sockets.cpp
+        ../../src/Utils/util.cpp
+        ../../src/Utils/util_arduino.cpp
         ../../src/WARDuino/CallbackHandler.cpp
+        ../../src/WARDuino/WARDuino.cpp
         )
 
 idf_component_register(SRCS "main.cpp" ${SOURCE_FILES} INCLUDE_DIRS ../../lib/json/single_include/ REQUIRES driver)
