--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -8,8 +8,8 @@ concurrency:
 jobs:
     formatting-check:
         name: Formatting Check
-        runs-on: ubuntu-latest
         if: github.event.pull_request.draft == false
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
             - name: Run clang-format style check for C/C++ programs.
@@ -21,7 +21,7 @@ jobs:
 
     compile-cli:
         name: Compile on ${{matrix.os}}
-        needs: formatting-check
+        needs: [formatting-check]
         runs-on: ${{matrix.os}}
         strategy:
             fail-fast: false
@@ -32,6 +32,14 @@ jobs:
               uses: actions/checkout@v2
               with:
                   submodules: 'recursive'
+
+            - name: Install protoc
+              uses: arduino/setup-protoc@v1
+              with:
+                version: '3.x'
+
+            - name: Compile .proto
+              run: protoc -I=src/Debug --cpp_out=src/Debug src/Debug/state.proto
 
             - name: Create build folder
               run: mkdir build-emu
@@ -75,6 +83,14 @@ jobs:
               with:
                   submodules: 'recursive'
 
+            - name: Install protoc
+              uses: arduino/setup-protoc@v1
+              with:
+                version: '3.x'
+
+            - name: Compile .proto
+              run: protoc -I=src/Debug --cpp_out=src/Debug src/Debug/state.proto
+
             - name: Compile sketches
               uses: arduino/compile-sketches@v1
               with:
@@ -95,7 +111,7 @@ jobs:
 
     compile-with-idf:
         name: (ESP-IDF) Compile on ${{matrix.board.platform-name}}
-        needs: formatting-check
+        needs: [formatting-check]
         runs-on: ubuntu-latest
         strategy:
             fail-fast: false
@@ -108,6 +124,14 @@ jobs:
               uses: actions/checkout@v2
               with:
                   submodules: 'recursive'
+
+            - name: Install protoc
+              uses: arduino/setup-protoc@v1
+              with:
+                version: '3.x'
+
+            - name: Compile .proto
+              run: protoc -I=src/Debug --cpp_out=src/Debug src/Debug/state.proto
 
             - name: Build WARDuino for ESP-IDF
               uses: espressif/esp-idf-ci-action@v1
