Fix cli cmake for protobuf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ if (BUILD_EMULATOR)
     find_package(Protobuf REQUIRED)
 
     protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS src/Debug/state.proto)
+    set_source_files_properties(${PROTO_SRC} ${PROTO_HDRS} PROPERTIES GENERATED TRUE)
 
     set(SOURCE_FILES
             src/WARDuino/WARDuino.cpp
@@ -68,5 +69,5 @@ if (BUILD_EMULATOR)
     # WARDuino CLI
     add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES} ${TEST_FRAMEWORK} ${PROTO_SRCS} ${PROTO_HDRS})
     target_link_libraries(wdcli PRIVATE Threads::Threads ${Protobuf_LIBRARIES})
-    target_include_directories(wdcli PRIVATE ${EXTERNAL_LIB_HEADERS})
+    target_include_directories(wdcli PRIVATE ${EXTERNAL_LIB_HEADERS} ${CMAKE_CURRENT_BINARY_DIR})
 endif (BUILD_EMULATOR)
