--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -33,10 +33,22 @@ jobs:
               with:
                   submodules: 'recursive'
 
+            - name: Setup devtools (macos)
+              if: matrix.os == 'macos-latest'
+              run: brew install autoconf automake libtool
+
             - name: Setup protoc
-              uses: arduino/setup-protoc@v1
-              with:
-                version: '3.x'
+              run: |
+                mkdir -p $HOME/tmp/protobuf
+                cd $HOME/tmp/protobuf
+                git clone https://github.com/protocolbuffers/protobuf.git .
+                git submodule update --init --recursive
+                ./autogen.sh
+                ./configure
+                make -j$(nproc) # $(nproc) ensures it uses all cores for compilation
+                make check
+                sudo make install
+                sudo ldconfig # refresh shared library cache.
 
             - name: Create build folder
               run: mkdir build-emu
@@ -120,9 +132,17 @@ jobs:
                   submodules: 'recursive'
 
             - name: Setup protoc
-              uses: arduino/setup-protoc@v1
-              with:
-                version: '3.x'
+              run: |
+                mkdir -p $HOME/tmp/protobuf
+                cd $HOME/tmp/protobuf
+                git clone https://github.com/protocolbuffers/protobuf.git .
+                git submodule update --init --recursive
+                ./autogen.sh
+                ./configure
+                make -j$(nproc) # $(nproc) ensures it uses all cores for compilation
+                make check
+                sudo make install
+                sudo ldconfig # refresh shared library cache.
 
             - name: Build WARDuino for ESP-IDF
               uses: espressif/esp-idf-ci-action@v1
