--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -37,8 +37,12 @@ jobs:
               if: matrix.os == 'macos-latest'
               run: brew install autoconf automake libtool
 
+            - name: Setup ccache
+              uses: hendrikmuhs/ccache-action@v1.2
+
             - name: Setup protoc
               run: |
+                export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH" # add ccache
                 mkdir -p $HOME/tmp/protobuf
                 cd $HOME/tmp/protobuf
                 git clone https://github.com/protocolbuffers/protobuf.git .
