--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,6 +5,9 @@ concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
     cancel-in-progress: true  # Cancel in-flight jobs for the same branch or PR
 
+env:
+  PROTOBUF_VERSION: v21.4
+
 jobs:
     formatting-check:
         name: Formatting Check
@@ -37,15 +40,21 @@ jobs:
               if: matrix.os == 'macos-latest'
               run: brew install autoconf automake libtool
 
-            - name: Setup ccache
-              uses: hendrikmuhs/ccache-action@v1.2
+            - name: Cache protobuf
+              id: cache-protobuf
+              uses: actions/cache@v3
+              with:
+                path: $HOME/tmp/protobuf
+                key: ${{ matrix.os }}-protobuf${{ env.PROTOBUF_VERSION }}
 
-            - name: Setup protoc
+            - name: Setup protobuf
+              if: steps.cache-protobuf.outputs.cache-hit != 'true'
               run: |
                 export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH" # add ccache
                 mkdir -p $HOME/tmp/protobuf
                 cd $HOME/tmp/protobuf
                 git clone https://github.com/protocolbuffers/protobuf.git .
+                git checkout ${{ env.PROTOBUF_VERSION }}
                 git submodule update --init --recursive
                 ./autogen.sh
                 ./configure
@@ -135,11 +144,20 @@ jobs:
               with:
                   submodules: 'recursive'
 
-            - name: Setup protoc
+            - name: Cache protobuf
+              id: cache-protobuf
+              uses: actions/cache@v3
+              with:
+                path: $HOME/tmp/protobuf
+                key: esp-protobuf${{ env.PROTOBUF_VERSION }}
+
+            - name: Setup protobuf
+              if: steps.cache-protobuf.outputs.cache-hit != 'true'
               run: |
                 mkdir -p $HOME/tmp/protobuf
                 cd $HOME/tmp/protobuf
                 git clone https://github.com/protocolbuffers/protobuf.git .
+                git checkout ${{ env.PROTOBUF_VERSION }}
                 git submodule update --init --recursive
                 ./autogen.sh
                 ./configure
