--- a/benchmarks/tasks/makefile
+++ b/benchmarks/tasks/makefile
@@ -1,16 +1,5 @@
 TASKS=$(patsubst %/.,%,$(wildcard */.))
 
-CONFIG = .config
-include ${CONFIG}
-
-ifndef SSID
-$(error SSID is not set. Use a .config file.)
-endif
-
-ifndef PASSWORD
-$(error PASSWORD is not set. Use a .config file.)
-endif
-
 all: $(addsuffix /wast/warduino/warduino.ino,$(TASKS)) $(addsuffix /wast/edward/edward.ino,$(TASKS)) $(addsuffix /wast/wasm3/wasm3.ino,$(TASKS)) $(addsuffix /wast/impl.wast,$(TASKS)) $(addsuffix /wast/impl.wasm,$(TASKS)) $(addsuffix /c/arduino.ino,$(TASKS))
 
 	echo $(TASKS)
@@ -22,12 +11,11 @@ all: $(addsuffix /wast/warduino/warduino.ino,$(TASKS)) $(addsuffix /wast/edward/
 	sed -i 's/[^ ]*_impl_wasm/impl_wasm/' $@
 	cat ../warduino.ino.template >> $@
 
-%/wast/edward/edward.ino: %/wast/impl.wasm .config
+%/wast/edward/edward.ino: %/wast/impl.wasm
 	-mkdir $(@D)
 	xxd -i $< $@
 	sed -i 's/[^ ]*_impl_wasm/impl_wasm/' $@
 	cat ../edward.ino.template >> $@
-	sed -i 's/{{SSID}}/$(SSID)/g; s/{{Password}}/$(PASSWORD)/g' $@
 
 %/wast/wasm3/wasm3.ino: %/wast/impl.wasm
 	-mkdir $(@D)
