Add WARDuino executor to Rebench config

--- a/benchmarks/warduino.conf
+++ b/benchmarks/warduino.conf
@@ -28,11 +28,20 @@ executors:
     native:
         path: .
         executable: native_bench.sh
-        env: 
+        env:
             PATH: /snap/bin/:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
         args: " %(benchmark)s"
         build:
             - cd tasks; make
+    warduino:
+        path: .
+        executable: warduino_bench.sh
+        env:
+            PATH: /snap/bin/:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+        args: " %(benchmark)s"
+        build:
+            - cd tasks; make
+
 
 # combining benchmark suites and executions
 experiments:
@@ -41,4 +50,5 @@ experiments:
           - Microbenchmarks
         executions:
             - native
+            - warduino
 
