Remove verbose Arduino compilation output

--- a/platforms/Arduino/Makefile
+++ b/platforms/Arduino/Makefile
@@ -7,7 +7,7 @@ flash:
 	arduino-cli upload -p $(PORT)  --fqbn $(FQBN) Arduino.ino
 
 compile: 
-	arduino-cli -v compile --fqbn $(FQBN) Arduino.ino
+	arduino-cli compile --fqbn $(FQBN) Arduino.ino
 
 monitor: 
 	arduino-cli monitor -p $(PORT) -c baudrate=115200
