--- a/examples/rust/main/CMakeLists.txt
+++ b/examples/rust/main/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SOURCE_FILES
         ../../../src/WARDuino/CallbackHandler.cpp
         )
 
-idf_component_register(SRCS "main.cpp" ${SOURCE_FILES} INCLUDE_DIRS "" REQUIRES driver)
+idf_component_register(SRCS "main.cpp" ${SOURCE_FILES} INCLUDE_DIRS ../../../lib/json/single_include/ REQUIRES driver)
 
 add_definitions(-DESP=1)
 
