--- a/examples/rust/main/CMakeLists.txt
+++ b/examples/rust/main/CMakeLists.txt
@@ -2,7 +2,11 @@ set(SOURCE_FILES
         ../../../src/Memory/mem.cpp
         ../../../src/Utils/util.cpp
         ../../../src/Utils/util_arduino.cpp
+        ../../../src/Utils/sockets.cpp
         ../../../src/Debug/debugger.cpp
+        ../../../src/Edward/proxy.cpp
+        ../../../src/Edward/proxy_supervisor.cpp
+        ../../../src/Edward/RFC.cpp
         ../../../src/Utils/macros.cpp
         ../../../src/WARDuino/WARDuino.cpp
         ../../../src/Primitives/emulated.cpp
