add files for printing state and (de)serialising state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,8 @@ if (BUILD_EMULATOR)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+            src/Utils/state_de_serialise.cpp)
 
     set(TEST_FRAMEWORK
             tests/integration/wasm_tests.cpp
@@ -97,7 +98,8 @@ if(BUILD_UNITTEST)
             src/Debug/debugger.cpp
             src/Edward/proxy.cpp
             src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp)
+            src/Edward/RFC.cpp
+            src/Utils/state_de_serialise.cpp)
 
     # Use C++11
     set(CMAKE_CXX_STANDARD 11)
