bug fix: add esp-idf missing cpp file

--- a/platforms/ESP-IDF/CMakeLists.txt
+++ b/platforms/ESP-IDF/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_FILES
         ../../src/Utils/sockets.cpp
         ../../src/Utils/util.cpp
         ../../src/Utils/util_arduino.cpp
+        ../../src/Utils/state_de_serialise.cpp
         ../../src/WARDuino/CallbackHandler.cpp
         ../../src/WARDuino/WARDuino.cpp
         )
